--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
+    "@google-cloud/local-auth": "^3.0.1",
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
@@ -23,6 +24,8 @@
     "dotenv": "^17.2.2",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
+    "google-auth-library": "^10.3.0",
+    "googleapis": "^159.0.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "postgres": "^3.4.7",
