--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@tanstack/react-query": "^5.87.4",
     "@types/pg": "^8.15.5",
+    "axios": "^1.12.1",
     "dotenv": "^17.2.2",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
