--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "googleapis": "^159.0.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
+    "openai": "^5.20.2",
     "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
