--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ FACEBOOK_CLIENT_ID="your-facebook-client-id"
 FACEBOOK_CLIENT_SECRET="your-facebook-client-secret"
 
 # Recall.ai
-RECALL_AI_API_KEY="d31eff960b1866d5c7f32cd35e911a7db6127fc4"
+RECALL_AI_API_KEY=""
 
 # OpenAI (for AI content generation)
 OPENAI_API_KEY="your-openai-api-key"
